--- a/SEC.ipynb
+++ b/SEC.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -923,13 +923,285 @@
        "[124 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test[(test['time'] == '2403') & (test['fp'] == 'Q2')]"
+    "test[(test['time'] == '2403') ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetest = test[ test['frame'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>finType</th>\n",
+       "      <th>val</th>\n",
+       "      <th>accn</th>\n",
+       "      <th>fy</th>\n",
+       "      <th>fp</th>\n",
+       "      <th>form</th>\n",
+       "      <th>filed</th>\n",
+       "      <th>frame</th>\n",
+       "      <th>endFormat</th>\n",
+       "      <th>time</th>\n",
+       "      <th>startFormat</th>\n",
+       "      <th>monthWindow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AccountsPayableCurrent</td>\n",
+       "      <td>5.520000e+09</td>\n",
+       "      <td>0001193125-09-214859</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>10-K</td>\n",
+       "      <td>2009-10-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008-09-27</td>\n",
+       "      <td>0809</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AccountsPayableCurrent</td>\n",
+       "      <td>5.601000e+09</td>\n",
+       "      <td>0001193125-09-214859</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>10-K</td>\n",
+       "      <td>2009-10-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-09-26</td>\n",
+       "      <td>0909</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AccountsPayableCurrent</td>\n",
+       "      <td>5.601000e+09</td>\n",
+       "      <td>0001193125-10-012085</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2010-01-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-09-26</td>\n",
+       "      <td>0909</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AccountsPayableCurrent</td>\n",
+       "      <td>5.601000e+09</td>\n",
+       "      <td>0001193125-10-012091</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>10-K/A</td>\n",
+       "      <td>2010-01-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-09-26</td>\n",
+       "      <td>0909</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AccountsPayableCurrent</td>\n",
+       "      <td>5.601000e+09</td>\n",
+       "      <td>0001193125-10-088957</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2010-04-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-09-26</td>\n",
+       "      <td>0909</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22470</th>\n",
+       "      <td>HedgedLiabilityFairValueHedge</td>\n",
+       "      <td>1.873900e+10</td>\n",
+       "      <td>0000320193-23-000077</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Q3</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2023-08-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-09-24</td>\n",
+       "      <td>2209</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22473</th>\n",
+       "      <td>HedgedLiabilityFairValueHedge</td>\n",
+       "      <td>1.824700e+10</td>\n",
+       "      <td>0000320193-23-000106</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>10-K</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22474</th>\n",
+       "      <td>HedgedLiabilityFairValueHedge</td>\n",
+       "      <td>1.824700e+10</td>\n",
+       "      <td>0000320193-24-000006</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2024-02-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22485</th>\n",
+       "      <td>IncrementalCommonSharesAttributableToShareBase...</td>\n",
+       "      <td>6.144500e+07</td>\n",
+       "      <td>0000320193-24-000069</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2024-05-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>2304</td>\n",
+       "      <td>2022-09-25</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22489</th>\n",
+       "      <td>IncrementalCommonSharesAttributableToShareBase...</td>\n",
+       "      <td>6.286500e+07</td>\n",
+       "      <td>0000320193-24-000069</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>2024-05-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>2403</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13736 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 finType           val  \\\n",
+       "2                                 AccountsPayableCurrent  5.520000e+09   \n",
+       "4                                 AccountsPayableCurrent  5.601000e+09   \n",
+       "5                                 AccountsPayableCurrent  5.601000e+09   \n",
+       "6                                 AccountsPayableCurrent  5.601000e+09   \n",
+       "7                                 AccountsPayableCurrent  5.601000e+09   \n",
+       "...                                                  ...           ...   \n",
+       "22470                      HedgedLiabilityFairValueHedge  1.873900e+10   \n",
+       "22473                      HedgedLiabilityFairValueHedge  1.824700e+10   \n",
+       "22474                      HedgedLiabilityFairValueHedge  1.824700e+10   \n",
+       "22485  IncrementalCommonSharesAttributableToShareBase...  6.144500e+07   \n",
+       "22489  IncrementalCommonSharesAttributableToShareBase...  6.286500e+07   \n",
+       "\n",
+       "                       accn    fy  fp    form       filed frame  endFormat  \\\n",
+       "2      0001193125-09-214859  2009  FY    10-K  2009-10-27   NaN 2008-09-27   \n",
+       "4      0001193125-09-214859  2009  FY    10-K  2009-10-27   NaN 2009-09-26   \n",
+       "5      0001193125-10-012085  2010  Q1    10-Q  2010-01-25   NaN 2009-09-26   \n",
+       "6      0001193125-10-012091  2009  FY  10-K/A  2010-01-25   NaN 2009-09-26   \n",
+       "7      0001193125-10-088957  2010  Q2    10-Q  2010-04-21   NaN 2009-09-26   \n",
+       "...                     ...   ...  ..     ...         ...   ...        ...   \n",
+       "22470  0000320193-23-000077  2023  Q3    10-Q  2023-08-04   NaN 2022-09-24   \n",
+       "22473  0000320193-23-000106  2023  FY    10-K  2023-11-03   NaN 2023-09-30   \n",
+       "22474  0000320193-24-000006  2024  Q1    10-Q  2024-02-02   NaN 2023-09-30   \n",
+       "22485  0000320193-24-000069  2024  Q2    10-Q  2024-05-03   NaN 2023-04-01   \n",
+       "22489  0000320193-24-000069  2024  Q2    10-Q  2024-05-03   NaN 2024-03-30   \n",
+       "\n",
+       "       time startFormat  monthWindow  \n",
+       "2      0809         NaT          NaN  \n",
+       "4      0909         NaT          NaN  \n",
+       "5      0909         NaT          NaN  \n",
+       "6      0909         NaT          NaN  \n",
+       "7      0909         NaT          NaN  \n",
+       "...     ...         ...          ...  \n",
+       "22470  2209         NaT          NaN  \n",
+       "22473  2309         NaT          NaN  \n",
+       "22474  2309         NaT          NaN  \n",
+       "22485  2304  2022-09-25          6.0  \n",
+       "22489  2403  2023-10-01          6.0  \n",
+       "\n",
+       "[13736 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetest"
    ]
   }
  ],
