--- a/unpackCompFacts.ipynb
+++ b/unpackCompFacts.ipynb
@@ -100,7 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scraper import get_companyfacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +460,7 @@
        "[22743 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
