--- a/deltaTest.ipynb
+++ b/deltaTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,144 +11,142 @@
     "\n",
     "builder = pyspark.sql.SparkSession.builder.appName(\"MyApp\") \\\n",
     "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
-    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\n",
-    "\n",
+    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\\\n",
+    "    .config(\"spark.jars.packages\", \"org.apache.hadoop:hadoop-azure:3.3.4,com.microsoft.azure:azure-storage:8.6.6\")\n",
+    "    \n",
+    "    \n",
+    "# added hadoop-azure:3.3.4,azure-storage:8.6.6,jetty-util:9.4.48.v20220622,jetty-util-ajax:9.4.48.v20220622\n",
     "spark = configure_spark_with_delta_pip(builder).getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.5.1</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>MyApp</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
       "text/plain": [
-       "'c:\\\\programowanie\\\\DCFmodeling'"
+       "<pyspark.sql.session.SparkSession at 0x269083f2200>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "os.getcwd()  # Prints the current working directory"
+    "spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hadoop-azure is available\n",
+      "azure-storage is available\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    spark._jvm.Class.forName(\"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")\n",
+    "    print(\"hadoop-azure is available\")\n",
+    "except Exception as e:\n",
+    "    print(\"hadoop-azure is NOT available\")\n",
+    "\n",
+    "# Check if azure-storage's CloudStorageAccount class is available\n",
+    "try:\n",
+    "    spark._jvm.Class.forName(\"com.microsoft.azure.storage.CloudStorageAccount\")\n",
+    "    print(\"azure-storage is available\")\n",
+    "except Exception as e:\n",
+    "    print(\"azure-storage is NOT available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\"fs.azure.sas.<container-name>.blob.core.windows.net\" \"fs.azure.sas.deltastorage.stockdatajanikowski.blob.core.windows.net\"\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv() \n",
+    "storage = os.environ['storageAccount']\n",
+    "storageKey = os.environ['storageKey']\n",
+    "\n",
+    "\n",
+    "spark.conf.set(\"fs.azure\", \"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")\n",
+    "spark.conf.set(\n",
+    "f'fs.azure.account.key.{storage}.blob.core.windows.net',\n",
+    "storageKey\n",
+    ")\n",
+    "\n",
+    "spark._jsc.hadoopConfiguration().set(\"fs.wasbs.impl\", \"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nspark.range(5).write.format(\"delta\").save(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\")\\nspark.read.format(\"delta\").load(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\").show()\\n\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "spark.range(5).write.format(\"delta\").save(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\")\n",
+    "spark.read.format(\"delta\").load(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\").show()\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = spark.range(0, 5)\n",
-    "data.write.format(\"delta\").save(\"c:/programowanie/DCFmodeling/tmp/delta-table\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+\n",
-      "| id|\n",
-      "+---+\n",
-      "|  0|\n",
-      "|  3|\n",
-      "|  1|\n",
-      "|  2|\n",
-      "|  4|\n",
-      "+---+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = spark.read.format(\"delta\").load(\"c:/programowanie/DCFmodeling/tmp/delta-table\")\n",
-    "df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = spark.range(10, 15)\n",
-    "data.write.format(\"delta\").save(\"c:/programowanie/DCFmodeling/tmp/delta-table2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+\n",
-      "| id|\n",
-      "+---+\n",
-      "|  0|\n",
-      "|  3|\n",
-      "|  1|\n",
-      "|  2|\n",
-      "|  4|\n",
-      "+---+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2 = spark.read.format(\"delta\").load(\"c:/programowanie/DCFmodeling/tmp/delta-table2\")\n",
-    "df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.createOrReplaceTempView(\"test\")\n",
-    "df2.createOrReplaceTempView(\"test2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+\n",
-      "| id|\n",
-      "+---+\n",
-      "|  0|\n",
-      "|  3|\n",
-      "|  1|\n",
-      "|  2|\n",
-      "|  4|\n",
-      "+---+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"\"\"\n",
-    "          SELECT * FROM test\n",
-    "          except\n",
-    "          SELECT * FROM test2\n",
-    "          \"\"\").show()"
+    "data.write.format(\"delta\").save(\"wasbs://deltastorage@stockdatajanikowski.blob.core.windows.net/test2\")"
    ]
   }
  ],
