Delete azure notebbook

--- a/deltaTest.ipynb
+++ b/deltaTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
     "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\\\n",
     "    .config(\"spark.jars.packages\", \"org.apache.hadoop:hadoop-azure:3.3.4,com.microsoft.azure:azure-storage:8.6.6\")\n",
     "    \n",
-    "    \n",
+    "\n",
     "# added hadoop-azure:3.3.4,azure-storage:8.6.6,jetty-util:9.4.48.v20220622,jetty-util-ajax:9.4.48.v20220622\n",
     "spark = configure_spark_with_delta_pip(builder).getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,10 +50,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x269083f2200>"
+       "<pyspark.sql.session.SparkSession at 0x250a67e8790>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,43 +110,52 @@
     "spark.conf.set(\n",
     "f'fs.azure.account.key.{storage}.blob.core.windows.net',\n",
     "storageKey\n",
-    ")\n",
-    "\n",
-    "spark._jsc.hadoopConfiguration().set(\"fs.wasbs.impl\", \"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nspark.range(5).write.format(\"delta\").save(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\")\\nspark.read.format(\"delta\").load(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\").show()\\n\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "spark.range(5).write.format(\"delta\").save(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\")\n",
-    "spark.read.format(\"delta\").load(\"wasbs://<your-container-name>@<your-storage-account-name>.blob.core.windows.net/<path-to-delta-table>\").show()\n",
-    "\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = spark.range(0, 5)\n",
-    "data.write.format(\"delta\").save(\"wasbs://deltastorage@stockdatajanikowski.blob.core.windows.net/test2\")"
+    "data.write.format(\"delta\").save(\"wasbs://deltastorage@stockdatajanikowski.blob.core.windows.net/test3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.read.format(\"delta\").load(\"wasbs://deltastorage@stockdatajanikowski.blob.core.windows.net/test3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+\n",
+      "| id|\n",
+      "+---+\n",
+      "|  4|\n",
+      "|  1|\n",
+      "|  2|\n",
+      "|  0|\n",
+      "|  3|\n",
+      "+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
    ]
   }
  ],
