Add spark methods file

--- a/deltaTest.ipynb
+++ b/deltaTest.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
-    "from delta import *\n",
+    "from delta import configure_spark_with_delta_pip\n",
     "\n",
     "builder = pyspark.sql.SparkSession.builder.appName(\"MyApp\") \\\n",
     "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "<pyspark.sql.session.SparkSession at 0x250a67e8790>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,6 @@
     "storage = os.environ['storageAccount']\n",
     "storageKey = os.environ['storageKey']\n",
     "\n",
-    "\n",
     "spark.conf.set(\"fs.azure\", \"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")\n",
     "spark.conf.set(\n",
     "f'fs.azure.account.key.{storage}.blob.core.windows.net',\n",
@@ -115,17 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = spark.range(0, 5)\n",
-    "data.write.format(\"delta\").save(\"wasbs://deltastorage@stockdatajanikowski.blob.core.windows.net/test3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
