--- a/notebooks/methods.ipynb
+++ b/notebooks/methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,225 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Security</th>\n",
-       "      <th>GICS Sector</th>\n",
-       "      <th>GICS Sub-Industry</th>\n",
-       "      <th>Headquarters Location</th>\n",
-       "      <th>Date added</th>\n",
-       "      <th>CIK</th>\n",
-       "      <th>Founded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MMM</td>\n",
-       "      <td>3M</td>\n",
-       "      <td>Industrials</td>\n",
-       "      <td>Industrial Conglomerates</td>\n",
-       "      <td>Saint Paul, Minnesota</td>\n",
-       "      <td>1957-03-04</td>\n",
-       "      <td>0000066740</td>\n",
-       "      <td>1902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AOS</td>\n",
-       "      <td>A. O. Smith</td>\n",
-       "      <td>Industrials</td>\n",
-       "      <td>Building Products</td>\n",
-       "      <td>Milwaukee, Wisconsin</td>\n",
-       "      <td>2017-07-26</td>\n",
-       "      <td>0000091142</td>\n",
-       "      <td>1916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ABT</td>\n",
-       "      <td>Abbott</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Health Care Equipment</td>\n",
-       "      <td>North Chicago, Illinois</td>\n",
-       "      <td>1957-03-04</td>\n",
-       "      <td>0000001800</td>\n",
-       "      <td>1888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ABBV</td>\n",
-       "      <td>AbbVie</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Biotechnology</td>\n",
-       "      <td>North Chicago, Illinois</td>\n",
-       "      <td>2012-12-31</td>\n",
-       "      <td>0001551152</td>\n",
-       "      <td>2013 (1888)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ACN</td>\n",
-       "      <td>Accenture</td>\n",
-       "      <td>Information Technology</td>\n",
-       "      <td>IT Consulting &amp; Other Services</td>\n",
-       "      <td>Dublin, Ireland</td>\n",
-       "      <td>2011-07-06</td>\n",
-       "      <td>0001467373</td>\n",
-       "      <td>1989</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>XYL</td>\n",
-       "      <td>Xylem Inc.</td>\n",
-       "      <td>Industrials</td>\n",
-       "      <td>Industrial Machinery &amp; Supplies &amp; Components</td>\n",
-       "      <td>White Plains, New York</td>\n",
-       "      <td>2011-11-01</td>\n",
-       "      <td>0001524472</td>\n",
-       "      <td>2011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>YUM</td>\n",
-       "      <td>Yum! Brands</td>\n",
-       "      <td>Consumer Discretionary</td>\n",
-       "      <td>Restaurants</td>\n",
-       "      <td>Louisville, Kentucky</td>\n",
-       "      <td>1997-10-06</td>\n",
-       "      <td>0001041061</td>\n",
-       "      <td>1997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>ZBRA</td>\n",
-       "      <td>Zebra Technologies</td>\n",
-       "      <td>Information Technology</td>\n",
-       "      <td>Electronic Equipment &amp; Instruments</td>\n",
-       "      <td>Lincolnshire, Illinois</td>\n",
-       "      <td>2019-12-23</td>\n",
-       "      <td>0000877212</td>\n",
-       "      <td>1969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>ZBH</td>\n",
-       "      <td>Zimmer Biomet</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Health Care Equipment</td>\n",
-       "      <td>Warsaw, Indiana</td>\n",
-       "      <td>2001-08-07</td>\n",
-       "      <td>0001136869</td>\n",
-       "      <td>1927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>Zoetis</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>Parsippany, New Jersey</td>\n",
-       "      <td>2013-06-21</td>\n",
-       "      <td>0001555280</td>\n",
-       "      <td>1952</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>503 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Symbol            Security             GICS Sector  \\\n",
-       "0      MMM                  3M             Industrials   \n",
-       "1      AOS         A. O. Smith             Industrials   \n",
-       "2      ABT              Abbott             Health Care   \n",
-       "3     ABBV              AbbVie             Health Care   \n",
-       "4      ACN           Accenture  Information Technology   \n",
-       "..     ...                 ...                     ...   \n",
-       "498    XYL          Xylem Inc.             Industrials   \n",
-       "499    YUM         Yum! Brands  Consumer Discretionary   \n",
-       "500   ZBRA  Zebra Technologies  Information Technology   \n",
-       "501    ZBH       Zimmer Biomet             Health Care   \n",
-       "502    ZTS              Zoetis             Health Care   \n",
-       "\n",
-       "                                GICS Sub-Industry    Headquarters Location  \\\n",
-       "0                        Industrial Conglomerates    Saint Paul, Minnesota   \n",
-       "1                               Building Products     Milwaukee, Wisconsin   \n",
-       "2                           Health Care Equipment  North Chicago, Illinois   \n",
-       "3                                   Biotechnology  North Chicago, Illinois   \n",
-       "4                  IT Consulting & Other Services          Dublin, Ireland   \n",
-       "..                                            ...                      ...   \n",
-       "498  Industrial Machinery & Supplies & Components   White Plains, New York   \n",
-       "499                                   Restaurants     Louisville, Kentucky   \n",
-       "500            Electronic Equipment & Instruments   Lincolnshire, Illinois   \n",
-       "501                         Health Care Equipment          Warsaw, Indiana   \n",
-       "502                               Pharmaceuticals   Parsippany, New Jersey   \n",
-       "\n",
-       "     Date added         CIK      Founded  \n",
-       "0    1957-03-04  0000066740         1902  \n",
-       "1    2017-07-26  0000091142         1916  \n",
-       "2    1957-03-04  0000001800         1888  \n",
-       "3    2012-12-31  0001551152  2013 (1888)  \n",
-       "4    2011-07-06  0001467373         1989  \n",
-       "..          ...         ...          ...  \n",
-       "498  2011-11-01  0001524472         2011  \n",
-       "499  1997-10-06  0001041061         1997  \n",
-       "500  2019-12-23  0000877212         1969  \n",
-       "501  2001-08-07  0001136869         1927  \n",
-       "502  2013-06-21  0001555280         1952  \n",
-       "\n",
-       "[503 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 503 entries, 0 to 502\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   Symbol                 503 non-null    object\n",
+      " 1   Security               503 non-null    object\n",
+      " 2   GICS Sector            503 non-null    object\n",
+      " 3   GICS Sub-Industry      503 non-null    object\n",
+      " 4   Headquarters Location  503 non-null    object\n",
+      " 5   Date added             503 non-null    object\n",
+      " 6   CIK                    503 non-null    object\n",
+      " 7   Founded                503 non-null    object\n",
+      "dtypes: object(8)\n",
+      "memory usage: 31.6+ KB\n"
+     ]
     }
    ],
    "source": [
-    "from scraper import get_spy500_formWiki\n",
+    "from source.scraper import get_spy500_formWiki\n",
     "\n",
     "\n",
-    "get_spy500_formWiki()"
+    "get_spy500_formWiki().info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +80,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5.973633</td>\n",
+       "      <td>5.973632</td>\n",
        "      <td>2020-01-02</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q1-2020</td>\n",
@@ -272,7 +88,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.878018</td>\n",
+       "      <td>5.878020</td>\n",
        "      <td>2020-01-03</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q1-2020</td>\n",
@@ -316,7 +132,7 @@
        "      <td>2024-08-12</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q3-2024</td>\n",
-       "      <td>117.687650</td>\n",
+       "      <td>117.710597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1160</th>\n",
@@ -324,7 +140,7 @@
        "      <td>2024-08-13</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q3-2024</td>\n",
-       "      <td>117.687650</td>\n",
+       "      <td>117.710597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1161</th>\n",
@@ -332,7 +148,7 @@
        "      <td>2024-08-14</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q3-2024</td>\n",
-       "      <td>117.687650</td>\n",
+       "      <td>117.710597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1162</th>\n",
@@ -340,15 +156,15 @@
        "      <td>2024-08-15</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q3-2024</td>\n",
-       "      <td>117.687650</td>\n",
+       "      <td>117.710597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1163</th>\n",
-       "      <td>123.390099</td>\n",
+       "      <td>124.170303</td>\n",
        "      <td>2024-08-16</td>\n",
        "      <td>NVDA</td>\n",
        "      <td>Q3-2024</td>\n",
-       "      <td>117.687650</td>\n",
+       "      <td>117.710597</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -357,28 +173,28 @@
       ],
       "text/plain": [
        "        adjClose        date ticker  Quarter  meanADJclose\n",
-       "0       5.973633  2020-01-02   NVDA  Q1-2020      6.285297\n",
-       "1       5.878018  2020-01-03   NVDA  Q1-2020      6.285297\n",
+       "0       5.973632  2020-01-02   NVDA  Q1-2020      6.285297\n",
+       "1       5.878020  2020-01-03   NVDA  Q1-2020      6.285297\n",
        "2       5.902669  2020-01-06   NVDA  Q1-2020      6.285297\n",
        "3       5.974131  2020-01-07   NVDA  Q1-2020      6.285297\n",
        "4       5.985336  2020-01-08   NVDA  Q1-2020      6.285297\n",
        "...          ...         ...    ...      ...           ...\n",
-       "1159  109.019997  2024-08-12   NVDA  Q3-2024    117.687650\n",
-       "1160  116.139999  2024-08-13   NVDA  Q3-2024    117.687650\n",
-       "1161  118.080002  2024-08-14   NVDA  Q3-2024    117.687650\n",
-       "1162  122.860001  2024-08-15   NVDA  Q3-2024    117.687650\n",
-       "1163  123.390099  2024-08-16   NVDA  Q3-2024    117.687650\n",
+       "1159  109.019997  2024-08-12   NVDA  Q3-2024    117.710597\n",
+       "1160  116.139999  2024-08-13   NVDA  Q3-2024    117.710597\n",
+       "1161  118.080002  2024-08-14   NVDA  Q3-2024    117.710597\n",
+       "1162  122.860001  2024-08-15   NVDA  Q3-2024    117.710597\n",
+       "1163  124.170303  2024-08-16   NVDA  Q3-2024    117.710597\n",
        "\n",
        "[1164 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scraper import get_StockPrices\n",
+    "from source.scraper import get_StockPrices\n",
     "import pandas as pd\n",
     "\n",
     "df = get_StockPrices('NVDA', startSelect='2020-01-02')\n",
@@ -387,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -738,13 +554,13 @@
        "[22743 rows x 17 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scraper import get_companyfacts\n",
+    "from source.scraper import get_companyfacts\n",
     "#https://data.sec.gov/api/xbrl/companyfacts/CIK0000320193.json\n",
     "mergedDF = get_companyfacts('0000320193')\n",
     "mergedDF"
@@ -752,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +577,7 @@
        "'\\nhttps://www.sec.gov/ix?doc=/Archives/edgar/data/0000320193/000114036124024352/ef20028273_8k.htm\\n\\n\\nhttps://data.sec.gov/api/xbrl/companyconcept/CIK0000320193/us-gaap/AccountsPayableCurrent.json - info about reports\\n\\nhttps://data.sec.gov/api/xbrl/companyfacts/CIK0000320193.json\\n\\n/0001140361|24|024352/\\naccessionNumber - 0001140361-24-024352\\n\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -921,14 +737,14 @@
        "[10211 rows x 4 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scraper import generate_CIK_TICKER\n",
-    "import spark_operations\n",
+    "from source.scraper import generate_CIK_TICKER\n",
+    "import spark_deltalake.spark_operations as spark_operations\n",
     "\n",
     "sec_ticker = generate_CIK_TICKER()\n",
     "sparkclass = spark_operations.sparkDelta()\n",
@@ -940,7 +756,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No tables found in any database.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparkclass.show_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.5.1</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>MyApp</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x20fe7d320e0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sparkclass.spark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spark_catalog'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc = sparkclass.spark\n",
+    "sc.catalog.currentCatalog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1209,7 @@
     }
    ],
    "source": [
-    "from scraper import get_SEC_filings\n",
+    "from source.scraper import get_SEC_filings\n",
     "\n",
     "\n",
     "ticker = 'AAPL'\n",
@@ -1324,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1479,7 @@
     }
    ],
    "source": [
-    "from scraper import unpackSECjson\n",
+    "from source.scraper import unpackSECjson\n",
     "\n",
     "unpackSECjson('CIK0000320193')"
    ]
