Add bookmark method to spark

--- a/notebooks/methods.ipynb
+++ b/notebooks/methods.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +210,7 @@
     "from spark_deltalake.spark_operations import sparkDelta\n",
     "\n",
     "\n",
-    "spark = sparkDelta()\n",
-    "pydf = spark.get_spark_dataframe('SEC_filings', True)"
+    "spark = sparkDelta()"
    ]
   },
   {
@@ -253,42 +252,13 @@
     }
    ],
    "source": [
+    "pydf = spark.get_spark_dataframe('SEC_filings', True)\n",
     "pydf.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ticker = 'AOS'\n",
-    "query = ' '.join(\n",
-    "    (\n",
-    "    \"WITH CTE AS (SELECT * FROM SEC_filings\",\n",
-    "    f'WHERE ticker = \\'{ticker}\\')',\n",
-    "    'SELECT ticker, formatTime(MAX(yearMonthDay)) AS max_time, formatTime(MIN(yearMonthDay)) AS min_time FROM CTE',\n",
-    "    'GROUP BY ticker'\n",
-    "    )\n",
-    " )\n",
-    "\n",
-    "\n",
-    "def formatTime(timestr):    \n",
-    "    year = timestr[:4]\n",
-    "    month = timestr[4:6]\n",
-    "    day = timestr[6:]\n",
-    "    \n",
-    "    return '-'.join((year, month, day))\n",
-    "\n",
-    "\n",
-    "spark.spark.udf.register(\"formatTime\", formatTime)\n",
-    "\n",
-    "dfspark = spark.spark.sql(query).toPandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +303,15 @@
        "0    AOS  2024-08-16  2012-12-31"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfspark"
+    "ticker = 'AOS'\n",
+    "\n",
+    "spark.get_min_max_fillings_date(ticker)"
    ]
   },
   {
