--- a/notebooks/methods.ipynb
+++ b/notebooks/methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,23 +46,8 @@
       "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2008-12-31|1.71791E8|0001193125-09-225470| Q3|10-Q|2009-11-05|  NaN|        NaN|    20081231|   BXP|\n",
       "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2008-12-31|1.71791E8|0001193125-10-040826| FY|10-K|2010-02-25|  NaN|        NaN|    20081231|   BXP|\n",
       "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-09-30|2.29177E8|0001193125-09-225470| Q3|10-Q|2009-11-05|  NaN|        NaN|    20090930|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-12-31|2.20089E8|0001193125-10-040826| FY|10-K|2010-02-25|  NaN|        NaN|    20091231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-12-31|2.20089E8|0001193125-10-111041| Q1|10-Q|2010-05-06|  NaN|        NaN|    20091231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-12-31|2.20089E8|0001193125-10-180850| Q2|10-Q|2010-08-06|  NaN|        NaN|    20091231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-12-31|2.20089E8|0001193125-10-250260| Q3|10-Q|2010-11-05|  NaN|        NaN|    20091231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2009-12-31|2.20089E8|0001193125-11-047496| FY|10-K|2011-02-25|  NaN|        NaN|    20091231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-03-31|1.89633E8|0001193125-10-111041| Q1|10-Q|2010-05-06|  NaN|        NaN|    20100331|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-06-30|   1.77E8|0001193125-10-180850| Q2|10-Q|2010-08-06|  NaN|        NaN|    20100630|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-09-30|1.99534E8|0001193125-10-250260| Q3|10-Q|2010-11-05|  NaN|        NaN|    20100930|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-12-31|1.86059E8|0001193125-11-047496| FY|10-K|2011-02-25|  NaN|        NaN|    20101231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-12-31|1.86059E8|0001193125-11-132592| Q1|10-Q|2011-05-09|  NaN|        NaN|    20101231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-12-31|1.86059E8|0001193125-11-214359| Q2|10-Q|2011-08-08|  NaN|        NaN|    20101231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-12-31|1.86059E8|0001193125-11-302448| Q3|10-Q|2011-11-08|  NaN|        NaN|    20101231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2010-12-31|1.61592E8|0001193125-12-085764| FY|10-K|2012-02-28|  NaN|        NaN|    20101231|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2011-03-31|1.71617E8|0001193125-11-132592| Q1|10-Q|2011-05-09|  NaN|        NaN|    20110331|   BXP|\n",
-      "|AccountsPayableAn...|Accounts Payable ...|Sum of the carryi...|2011-06-30|1.73257E8|0001193125-11-214359| Q2|10-Q|2011-08-08|  NaN|        NaN|    20110630|   BXP|\n",
       "+--------------------+--------------------+--------------------+----------+---------+--------------------+---+----+----------+-----+-----------+------------+------+\n",
-      "only showing top 20 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -78,7 +63,7 @@
     "\n",
     "path = spark.blobPath + '/company_facts'\n",
     "#SEC_filings stock_prices \n",
-    "spark.spark.sql(f'SELECT * FROM delta.`{path}` as f WHERE ticker = \\'BXP\\'').show()"
+    "spark.spark.sql(f'SELECT * FROM delta.`{path}` as f WHERE ticker = \\'BXP\\'').show(5)"
    ]
   },
   {
@@ -273,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +267,7 @@
        "DataFrame[finType: string, label: string, description: string, end: string, val: double, accessionNumber: string, fp: string, form: string, filed: string, start: string, monthWindow: string, yearMonthDay: string, ticker: string]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,37 +280,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+------------+---+-----------------+--------------------+\n",
-      "|ticker|     fintype|val|         adjclose|             fileURL|\n",
-      "+------+------------+---+-----------------+--------------------+\n",
-      "|   BXP|LineOfCredit|0.0|96.08738708496094|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0| 95.0941162109375|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|94.50556182861328|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|95.91079711914062|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0| 95.2044906616211|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|94.54231262207031|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|94.91754150390625|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0| 93.4386978149414|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|94.75568389892578|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|95.82252502441406|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|96.78633880615234|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|97.00704193115234|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|96.54352569580078|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|93.57115936279297|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|92.54112243652344|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|90.98872375488281|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|90.09844970703125|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0| 90.8636474609375|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|90.73200225830078|https://www.sec.g...|\n",
-      "|   BXP|LineOfCredit|0.0|91.06841278076172|https://www.sec.g...|\n",
-      "+------+------------+---+-----------------+--------------------+\n",
+      "+------+--------------------+------+------------------+--------------------+------------+\n",
+      "|ticker|             fintype|   val|          adjclose|             fileURL|yearMonthDay|\n",
+      "+------+--------------------+------+------------------+--------------------+------------+\n",
+      "|   BXP|        LineOfCredit|   0.0| 85.38506317138672|https://www.sec.g...|    20210331|\n",
+      "|   BXP|        LineOfCredit|   0.0| 97.44332122802734|https://www.sec.g...|    20210630|\n",
+      "|   BXP|        LineOfCredit|   0.0| 92.94353485107422|https://www.sec.g...|    20210930|\n",
+      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|        LineOfCredit|2.55E8|112.26079559326172|https://www.sec.g...|    20220331|\n",
+      "|   BXP|        LineOfCredit|1.65E8| 78.39462280273438|https://www.sec.g...|    20220630|\n",
+      "|   BXP|        LineOfCredit| 3.4E8|   66.908447265625|https://www.sec.g...|    20220930|\n",
+      "|   BXP|        LineOfCredit|   0.0| 49.94557189941406|https://www.sec.g...|    20230331|\n",
+      "|   BXP|        LineOfCredit|   0.0| 54.08084487915039|https://www.sec.g...|    20230630|\n",
+      "|   BXP|LineOfCreditFacil...|0.0015|102.87355041503906|https://www.sec.g...|    20210615|\n",
+      "|   BXP|LineOfCreditFacil...|0.0015|102.87355041503906|https://www.sec.g...|    20210615|\n",
+      "|   BXP|LineOfCreditFacil...|0.0015| 99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|LineOfCreditFacil...|0.0015| 54.08084487915039|https://www.sec.g...|    20230630|\n",
+      "|   BXP|LineOfCreditFacil...| 1.0E9| 89.93573760986328|https://www.sec.g...|    20141231|\n",
+      "|   BXP|LineOfCreditFacil...| 1.0E9| 91.87318420410156|https://www.sec.g...|    20151231|\n",
+      "|   BXP|LineOfCreditFacil...| 1.5E9|102.87355041503906|https://www.sec.g...|    20210615|\n",
+      "+------+--------------------+------+------------------+--------------------+------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -333,8 +318,8 @@
    ],
    "source": [
     "spark.spark.sql(\"\"\"\n",
-    "                SELECT p.ticker, fintype, val, adjclose, fileURL FROM company_facts AS cf\n",
-    "                JOIN stock_prices as p ON cf.ticker = p.ticker\n",
+    "                SELECT p.ticker, fintype, val, adjclose, fileURL, cf.yearMonthDay FROM company_facts AS cf\n",
+    "                JOIN stock_prices as p ON (cf.ticker = p.ticker and cf.yearMonthDay = p.yearMonthDay)\n",
     "                JOIN SEC_filings as fil ON (fil.ticker = cf.ticker and fil.accessionNumber = cf.accessionNumber)\n",
     "                WHERE cf.ticker = 'BXP'\n",
     "                \"\"\").show()"
