--- a/notebooks/methods.ipynb
+++ b/notebooks/methods.ipynb
@@ -280,38 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+--------------------+------+------------------+--------------------+------------+\n",
-      "|ticker|             fintype|   val|          adjclose|             fileURL|yearMonthDay|\n",
-      "+------+--------------------+------+------------------+--------------------+------------+\n",
-      "|   BXP|        LineOfCredit|   0.0| 85.38506317138672|https://www.sec.g...|    20210331|\n",
-      "|   BXP|        LineOfCredit|   0.0| 97.44332122802734|https://www.sec.g...|    20210630|\n",
-      "|   BXP|        LineOfCredit|   0.0| 92.94353485107422|https://www.sec.g...|    20210930|\n",
-      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|        LineOfCredit|1.45E8| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|        LineOfCredit|2.55E8|112.26079559326172|https://www.sec.g...|    20220331|\n",
-      "|   BXP|        LineOfCredit|1.65E8| 78.39462280273438|https://www.sec.g...|    20220630|\n",
-      "|   BXP|        LineOfCredit| 3.4E8|   66.908447265625|https://www.sec.g...|    20220930|\n",
-      "|   BXP|        LineOfCredit|   0.0| 49.94557189941406|https://www.sec.g...|    20230331|\n",
-      "|   BXP|        LineOfCredit|   0.0| 54.08084487915039|https://www.sec.g...|    20230630|\n",
-      "|   BXP|LineOfCreditFacil...|0.0015|102.87355041503906|https://www.sec.g...|    20210615|\n",
-      "|   BXP|LineOfCreditFacil...|0.0015|102.87355041503906|https://www.sec.g...|    20210615|\n",
-      "|   BXP|LineOfCreditFacil...|0.0015| 99.64728546142578|https://www.sec.g...|    20211231|\n",
-      "|   BXP|LineOfCreditFacil...|0.0015| 54.08084487915039|https://www.sec.g...|    20230630|\n",
-      "|   BXP|LineOfCreditFacil...| 1.0E9| 89.93573760986328|https://www.sec.g...|    20141231|\n",
-      "|   BXP|LineOfCreditFacil...| 1.0E9| 91.87318420410156|https://www.sec.g...|    20151231|\n",
-      "|   BXP|LineOfCreditFacil...| 1.5E9|102.87355041503906|https://www.sec.g...|    20210615|\n",
-      "+------+--------------------+------+------------------+--------------------+------------+\n",
-      "only showing top 20 rows\n",
+      "+------+------------+------+-----------------+--------------------+------------+\n",
+      "|ticker|     fintype|   val|         adjclose|             fileURL|yearMonthDay|\n",
+      "+------+------------+------+-----------------+--------------------+------------+\n",
+      "|   BXP|LineOfCredit|   0.0|85.38506317138672|https://www.sec.g...|    20210331|\n",
+      "|   BXP|LineOfCredit|   0.0|97.44332122802734|https://www.sec.g...|    20210630|\n",
+      "|   BXP|LineOfCredit|   0.0|92.94353485107422|https://www.sec.g...|    20210930|\n",
+      "|   BXP|LineOfCredit|1.45E8|99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "|   BXP|LineOfCredit|1.45E8|99.64728546142578|https://www.sec.g...|    20211231|\n",
+      "+------+------------+------+-----------------+--------------------+------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -322,7 +307,7 @@
     "                JOIN stock_prices as p ON (cf.ticker = p.ticker and cf.yearMonthDay = p.yearMonthDay)\n",
     "                JOIN SEC_filings as fil ON (fil.ticker = cf.ticker and fil.accessionNumber = cf.accessionNumber)\n",
     "                WHERE cf.ticker = 'BXP'\n",
-    "                \"\"\").show()"
+    "                \"\"\").show(5)"
    ]
   },
   {
